--- a/css/style.scss
+++ b/css/style.scss
@@ -85,7 +85,7 @@
 }
 //ADVERTISMENT
 .adv{
-  background-color: rgb(223, 223, 223);
+  background-color: rgb(243, 243, 243);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -117,7 +117,7 @@
       font-family: "Raleway", sans-serif;
       color: black;
       text-align: center;
-      font-weight: 800;
+      font-weight: 600;
       font-size: 18px;
     }
 
@@ -190,6 +190,36 @@
   }
 }
 
+//PRODUCTS
+.products{
+  div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    margin: 60px 80px;
+    
+    h2 {
+      margin-top: 10px;
+      font-family: "Raleway", sans-serif;
+      color: black;
+      text-align: center;
+      font-weight: 600;
+      font-size: 18px;
+    }
+
+    p {
+      margin-top: 10px;
+      font-family: "Raleway", sans-serif;
+      color: black;
+      text-align: center;
+      font-weight: 400;
+      font-size: 12px;
+    }
+  }
+}
+
 //MEDIA
 
 //576PX
@@ -243,7 +273,7 @@
     align-items: center;
     justify-content: center;
     padding: 0 15px;
-    height: 100vh;
+    height: 500px;
 
     .inner-main{
       align-items: flex-start;
@@ -271,10 +301,6 @@
 
   .bio{
     div{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
       margin: 10px 120px;
       padding: 50px 200px;
 
@@ -311,6 +337,21 @@
 
     div:hover{
       margin-bottom: -30px;
+    }
+  }
+
+  .products{
+    div{
+      margin: 10px 120px;
+      padding: 50px 200px;
+
+      h2{
+        font-size: 30px;
+      }
+
+      p{
+        font-size: 20px;
+      }
     }
   }
 }
