--- a/css/style.scss
+++ b/css/style.scss
@@ -92,7 +92,7 @@
   justify-content: space-evenly;
   align-items: center;
   padding: 20px 0px;
-  box-shadow: 0px 0px 30px 15px rgba(136, 136, 136, 0.75);
+  box-shadow: inset 0px 0px 30px 10px rgba(136, 136, 136, 0.75);
   
   >a{
     text-decoration: none;
@@ -199,7 +199,7 @@
     justify-content: center;
     align-items: center;
     background-color: white;
-    margin: 60px 80px;
+    margin: 20px 80px;
     
     h2 {
       margin-top: 10px;
@@ -217,6 +217,69 @@
       text-align: center;
       font-weight: 400;
       font-size: 12px;
+    }
+  }
+}
+
+//GALLERY
+.gallery{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .pallets{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+    .sidepictures{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      align-items: center;
+      width: 80%;
+      margin-bottom: 10px;
+      margin-top: 10px;
+
+      .pic1{
+        height: 80px;
+        width: 45%;
+        background-color: #e1a87b;
+      }
+
+      .pic2{
+        height: 80px;
+        width: 45%;
+        background-color: #aca3a6;
+      }
+
+      .pic3{
+        height: 80px;
+        width: 45%;
+        background-color: #c1f0ba;
+      }
+
+      .pic4{
+        height: 80px;
+        width: 45%;
+        background-color: #8da889;
+      }
+    }
+
+    .centerpicture{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 80%;
+
+      .pic5{
+        width: 45%;
+        height: 200px;
+        background-color: #e1ddda;
+      }
     }
   }
 }
@@ -250,6 +313,36 @@
 
   .hidden-md {
     display: none;
+  }
+
+  .gallery{
+    .pallets{
+      .sidepictures{
+        justify-content: space-evenly;
+        .pic1{
+          width: 30%;
+          height: 120px;
+        }
+        .pic2{
+          width: 30%;
+          height: 120px;
+        }
+        .pic3{
+          width: 30%;
+          height: 120px;
+        }
+        .pic4{
+          width: 30%;
+          height: 120px;
+        }
+      }
+      .centerpicture{
+        .pic5{
+          width: 30%;
+          height: 240px;
+        }
+      }
+    }
   }
  
 }
@@ -325,7 +418,7 @@
   .posts{
     flex-direction: row;
     justify-content: space-evenly;
-    height: 500px;
+    height: 400px;
 
     div{
       width: 30%;
@@ -352,6 +445,42 @@
 
       p{
         font-size: 25px;
+      }
+    }
+  }
+
+  .gallery{
+    .pallets{
+      flex-direction: row;
+      justify-content: space-between;
+      width: 60%;
+      .sidepictures{
+        flex-direction: column;
+        justify-content: space-between;
+        .pic1{
+          width: 90%;
+          height: 180px;
+          margin-bottom: 10px;
+        }
+        .pic2{
+          width: 90%;
+          height: 180px;
+        }
+        .pic3{
+          width: 90%;
+          height: 180px;
+          margin-bottom: 10px;
+        }
+        .pic4{
+          width: 90%;
+          height: 180px;
+        }
+      }
+      .centerpicture{
+        .pic5{
+          width: 90%;
+          height: 370px;
+        }
       }
     }
   }
