--- a/css/style.scss
+++ b/css/style.scss
@@ -47,9 +47,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  
 
-    >h2 {
+    > h2 {
       margin-top: 10px;
       font-family: "Raleway", sans-serif;
       color: white;
@@ -58,7 +57,7 @@
       font-size: 24px;
     }
 
-    >p {
+    > p {
       margin-top: 10px;
       font-family: "Raleway", sans-serif;
       color: white;
@@ -67,7 +66,7 @@
       font-size: 15px;
     }
 
-    >a {
+    > a {
       display: inline-block;
       margin-bottom: 20px;
       padding: 10px;
@@ -78,13 +77,13 @@
       background-color: white;
       color: #22b8c2;
       margin-top: 20px;
-      box-shadow: 2px 3px 15px 0px rgba(122,122,122,1);
+      box-shadow: 2px 3px 15px 0px rgba(122, 122, 122, 1);
       transition: 0s;
     }
   }
 }
 //ADVERTISMENT
-.adv{
+.adv {
   background-color: rgb(243, 243, 243);
   display: flex;
   flex-direction: row;
@@ -93,8 +92,8 @@
   align-items: center;
   padding: 20px 0px;
   box-shadow: inset 0px 0px 30px 10px rgba(136, 136, 136, 0.75);
-  
-  >a{
+
+  > a {
     text-decoration: none;
     transition: 0.2s;
     padding: 10px;
@@ -102,18 +101,17 @@
   }
 }
 
-
 //BIO
-.bio{
-  >div{
+.bio {
+  > div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: transparent;
     margin: 60px 80px;
-    
-    >h2{
+
+    > h2 {
       margin-top: 10px;
       font-family: "Raleway", sans-serif;
       color: black;
@@ -122,7 +120,7 @@
       font-size: 18px;
     }
 
-    >p {
+    > p {
       margin-top: 10px;
       font-family: "Raleway", sans-serif;
       color: black;
@@ -131,7 +129,7 @@
       font-size: 12px;
     }
 
-    >a {
+    > a {
       display: inline-block;
       margin-bottom: 20px;
       padding: 10px;
@@ -144,7 +142,7 @@
       color: rgb(78, 78, 78);
       margin-top: 20px;
       text-transform: uppercase;
-      box-shadow: 2px 3px 15px 0px rgba(122,122,122,1);
+      box-shadow: 2px 3px 15px 0px rgba(122, 122, 122, 1);
       text-align: center;
       transition: 0s;
     }
@@ -152,13 +150,13 @@
 }
 
 //POSTS
-.posts{
+.posts {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
 
-  div{
+  div {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -168,20 +166,19 @@
     background-color: white;
     box-shadow: 2px 3px 15px 0px rgb(187, 187, 187);
 
-
-    img{
+    img {
       height: 20px;
       margin-right: 10px;
       color: #00ffa3;
     }
 
-    h2{
+    h2 {
       font-size: 20px;
       font-family: "Raleway", sans-serif;
       font-weight: 1000;
     }
 
-    p{
+    p {
       font-size: 12px;
       font-family: "Raleway", sans-serif;
       font-weight: 400;
@@ -192,15 +189,15 @@
 }
 
 //PRODUCTS
-.products{
-  div{
+.products {
+  div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: white;
     margin: 20px 80px;
-    
+
     h2 {
       margin-top: 10px;
       font-family: "Raleway", sans-serif;
@@ -222,19 +219,19 @@
 }
 
 //GALLERY
-.gallery{
+.gallery {
   display: flex;
   justify-content: center;
   align-items: center;
 
-  .pallets{
+  .pallets {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
 
-    .sidepictures{
+    .sidepictures {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -244,38 +241,38 @@
       margin-bottom: 10px;
       margin-top: 10px;
 
-      .pic1{
+      .pic1 {
         height: 80px;
         width: 45%;
         background-color: #e1a87b;
       }
 
-      .pic2{
+      .pic2 {
         height: 80px;
         width: 45%;
         background-color: #aca3a6;
       }
 
-      .pic3{
+      .pic3 {
         height: 80px;
         width: 45%;
         background-color: #c1f0ba;
       }
 
-      .pic4{
+      .pic4 {
         height: 80px;
         width: 45%;
         background-color: #8da889;
       }
     }
 
-    .centerpicture{
+    .centerpicture {
       display: flex;
       justify-content: center;
       align-items: center;
       width: 80%;
 
-      .pic5{
+      .pic5 {
         width: 45%;
         height: 200px;
         background-color: #e1ddda;
@@ -315,36 +312,35 @@
     display: none;
   }
 
-  .gallery{
-    .pallets{
-      .sidepictures{
+  .gallery {
+    .pallets {
+      .sidepictures {
         justify-content: space-evenly;
-        .pic1{
+        .pic1 {
           width: 30%;
           height: 120px;
         }
-        .pic2{
+        .pic2 {
           width: 30%;
           height: 120px;
         }
-        .pic3{
+        .pic3 {
           width: 30%;
           height: 120px;
         }
-        .pic4{
+        .pic4 {
           width: 30%;
           height: 120px;
         }
       }
-      .centerpicture{
-        .pic5{
+      .centerpicture {
+        .pic5 {
           width: 30%;
           height: 240px;
         }
       }
     }
   }
- 
 }
 
 //992PX
@@ -369,115 +365,115 @@
     padding: 0 15px;
     height: 500px;
 
-    .inner-main{
+    .inner-main {
       align-items: flex-start;
       margin-left: 20px;
 
-      p{
+      p {
         text-align: left;
       }
-  
+
       a {
         transition: 0.5s;
       }
-  
+
       a:hover {
         background-color: antiquewhite;
       }
     }
   }
 
-  .adv{
-    a:hover{
-      background-color:rgb(187, 185, 185) ;
+  .adv {
+    a:hover {
+      background-color: rgb(187, 185, 185);
     }
   }
 
-  .bio{
-    div{
+  .bio {
+    div {
       margin: 10px 120px;
       padding: 50px 200px;
 
-      h2{
+      h2 {
         font-size: 35px;
       }
 
-      p{
+      p {
         font-size: 25px;
       }
 
-      a{
+      a {
         transition: 0.5s;
       }
-      a:hover{
+      a:hover {
         background-color: #01c27e;
       }
     }
   }
 
-  .posts{
+  .posts {
     flex-direction: row;
     justify-content: space-evenly;
     height: 400px;
 
-    div{
+    div {
       width: 30%;
       transition: 0.5s;
-    
-      p{
+
+      p {
         font-size: 16px;
       }
     }
 
-    div:hover{
+    div:hover {
       margin-bottom: -30px;
     }
   }
 
-  .products{
-    div{
+  .products {
+    div {
       margin: 10px 120px;
       padding: 50px 200px;
 
-      h2{
+      h2 {
         font-size: 35px;
       }
 
-      p{
+      p {
         font-size: 25px;
       }
     }
   }
 
-  .gallery{
-    .pallets{
+  .gallery {
+    .pallets {
       flex-direction: row;
       justify-content: space-between;
       width: 60%;
-      .sidepictures{
+      .sidepictures {
         flex-direction: column;
         justify-content: space-between;
-        .pic1{
+        .pic1 {
           width: 90%;
           height: 180px;
           margin-bottom: 10px;
         }
-        .pic2{
+        .pic2 {
           width: 90%;
           height: 180px;
         }
-        .pic3{
+        .pic3 {
           width: 90%;
           height: 180px;
           margin-bottom: 10px;
         }
-        .pic4{
+        .pic4 {
           width: 90%;
           height: 180px;
         }
       }
-      .centerpicture{
-        .pic5{
+      .centerpicture {
+        .pic5 {
           width: 90%;
           height: 370px;
         }
