--- a/css/style.css
+++ b/css/style.css
@@ -158,12 +158,13 @@
   text-align: center;
   font-weight: 400;
   font-size: 12px;
+  margin-bottom: 20px;
 }
 
 .bio > div > a {
   display: inline-block;
   margin-bottom: 20px;
-  padding: 10px;
+  padding: 8px;
   text-decoration: none;
   font-family: "Raleway", sans-serif;
   font-weight: 1000;
@@ -274,6 +275,10 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -361,6 +366,26 @@
   width: 45%;
   height: 200px;
   background-color: #e1ddda;
+}
+
+.gallery > a {
+  display: inline-block;
+  margin-bottom: 20px;
+  padding: 18px;
+  text-decoration: none;
+  font-family: "Raleway", sans-serif;
+  font-weight: 1000;
+  letter-spacing: 1px;
+  font-size: 14px;
+  background-color: #00ffa3;
+  color: #4e4e4e;
+  margin-top: 20px;
+  text-transform: uppercase;
+  -webkit-box-shadow: 2px 3px 15px 0px #7a7a7a;
+          box-shadow: 2px 3px 15px 0px #7a7a7a;
+  text-align: center;
+  -webkit-transition: 0s;
+  transition: 0s;
 }
 
 @media (min-width: 576px) {
@@ -471,6 +496,8 @@
   .bio div a {
     -webkit-transition: 0.5s;
     transition: 0.5s;
+    padding: 20px;
+    font-size: 18px;
   }
   .bio div a:hover {
     background-color: #01c27e;
@@ -546,6 +573,15 @@
   .gallery .pallets .centerpicture .pic5 {
     width: 90%;
     height: 370px;
+  }
+  .gallery a {
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    padding: 20px;
+    font-size: 18px;
+  }
+  .gallery a:hover {
+    background-color: #01c27e;
   }
 }
 
