--- a/css/style.scss
+++ b/css/style.scss
@@ -127,12 +127,13 @@
       text-align: center;
       font-weight: 400;
       font-size: 12px;
+      margin-bottom: 20px;
     }
 
     > a {
       display: inline-block;
       margin-bottom: 20px;
-      padding: 10px;
+      padding: 8px;
       text-decoration: none;
       font-family: "Raleway", sans-serif;
       font-weight: 1000;
@@ -221,6 +222,7 @@
 //GALLERY
 .gallery {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
@@ -278,6 +280,24 @@
         background-color: #e1ddda;
       }
     }
+  }
+
+  > a {
+    display: inline-block;
+    margin-bottom: 20px;
+    padding: 18px;
+    text-decoration: none;
+    font-family: "Raleway", sans-serif;
+    font-weight: 1000;
+    letter-spacing: 1px;
+    font-size: 14px;
+    background-color: #00ffa3;
+    color: rgb(78, 78, 78);
+    margin-top: 20px;
+    text-transform: uppercase;
+    box-shadow: 2px 3px 15px 0px rgba(122, 122, 122, 1);
+    text-align: center;
+    transition: 0s;
   }
 }
 
@@ -404,6 +424,8 @@
 
       a {
         transition: 0.5s;
+        padding: 20px;
+        font-size: 18px;
       }
       a:hover {
         background-color: #01c27e;
@@ -478,6 +500,15 @@
           height: 370px;
         }
       }
+    }
+
+    a {
+      transition: 0.5s;
+      padding: 20px;
+      font-size: 18px;
+    }
+    a:hover {
+      background-color: #01c27e;
     }
   }
 }
