--- a/css/style.scss
+++ b/css/style.scss
@@ -84,7 +84,10 @@
 }
 //ADVERTISMENT
 .adv {
-  background-color: rgb(243, 243, 243);
+  background: #d9d7d6;
+  background: -webkit-linear-gradient(top, #d9d7d6, #f2efed);
+  background: -moz-linear-gradient(top, #d9d7d6, #f2efed);
+  background: linear-gradient(to bottom, #d9d7d6, #f2efed);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -246,25 +249,45 @@
       .pic1 {
         height: 80px;
         width: 45%;
-        background-color: #e1a87b;
+        box-shadow: 2px 3px 50px 0px rgb(179, 179, 179);
+
+        background: #e5a471;
+        background: -webkit-linear-gradient(top, #e5a471, #e6b893);
+        background: -moz-linear-gradient(top, #e5a471, #e6b893);
+        background: linear-gradient(to bottom, #e5a471, #e6b893);
       }
 
       .pic2 {
         height: 80px;
         width: 45%;
-        background-color: #aca3a6;
+        box-shadow: 2px 3px 50px 0px rgb(179, 179, 179);
+
+        background: #aca3a7;
+        background: -webkit-linear-gradient(top, #aca3a7, #d2c9cc);
+        background: -moz-linear-gradient(top, #aca3a7, #d2c9cc);
+        background: linear-gradient(to bottom, #aca3a7, #d2c9cc);
       }
 
       .pic3 {
         height: 80px;
         width: 45%;
-        background-color: #c1f0ba;
+        box-shadow: 2px 3px 50px 0px rgb(179, 179, 179);
+
+        background: #c2f0ba;
+        background: -webkit-linear-gradient(top, #c2f0ba, #daf5d6);
+        background: -moz-linear-gradient(top, #c2f0ba, #daf5d6);
+        background: linear-gradient(to bottom, #c2f0ba, #daf5d6);
       }
 
       .pic4 {
         height: 80px;
         width: 45%;
-        background-color: #8da889;
+        box-shadow: 2px 3px 50px 0px rgb(179, 179, 179);
+
+        background: #8da889;
+        background: -webkit-linear-gradient(top, #8da889, #c0cabf);
+        background: -moz-linear-gradient(top, #8da889, #c0cabf);
+        background: linear-gradient(to bottom, #8da889, #c0cabf);
       }
     }
 
@@ -277,7 +300,13 @@
       .pic5 {
         width: 45%;
         height: 200px;
+        box-shadow: 0px 0px 50px 0px rgb(179, 179, 179);
+
         background-color: #e1ddda;
+        background: #e1ddda;
+        background: -webkit-linear-gradient(top, #e1ddda, #f3f3f3);
+        background: -moz-linear-gradient(top, #e1ddda, #f3f3f3);
+        background: linear-gradient(to bottom, #e1ddda, #f3f3f3);
       }
     }
   }
@@ -394,7 +423,7 @@
       }
 
       a {
-        transition: 0.5s;
+        transition: 0.3s;
       }
 
       a:hover {
@@ -423,7 +452,7 @@
       }
 
       a {
-        transition: 0.5s;
+        transition: 0.3s;
         padding: 20px;
         font-size: 18px;
       }
@@ -503,7 +532,7 @@
     }
 
     a {
-      transition: 0.5s;
+      transition: 0.3s;
       padding: 20px;
       font-size: 18px;
     }
